--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="dist/images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body class="code-snippets-visible">
@@ -622,7 +622,7 @@
       <h6 class="docs-header">Examples</h6>
       <div class="row example">
         <a class="example-screenshot-wrapper" target="_blank" href="examples/landing">
-          <img class="example-screenshot" src="images/examples/landing.jpg">
+          <img class="example-screenshot" src="images/landing.jpg">
         </a>
         <div class="one-half offset-by-one-half column">
           <h6 class="example-header">Demo Landing Page</h6>
