--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                 </div>
                 <pre class="code-content"><code><span class="comment">// Import JSCroot functions from CDN</span>
 <span class="keyword">import</span> { <span class="function">setInner</span>, <span class="function">onClick</span>, <span class="function">postJSON</span> } 
-<span class="keyword">from</span> <span class="string">"https://cdn.jsdelivr.net/gh/jscroot/<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c6aaafa486f6e8f6e8f5">[email&#160;protected]</a>/element.js"</span>;
+<span class="keyword">from</span> <span class="string">"https://cdn.jsdelivr.net/gh/jscroot/lib@0.2.8/element.min.js"</span>;
 
 <span class="comment">// Configure backend URL</span>
 <span class="keyword">const</span> <span class="function">urlBackend</span> = <span class="string">"https://api.example.com"</span>;
@@ -655,7 +655,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 32px;">
-                <a href="https://cdn.jsdelivr.net/gh/jscroot/lib" class="btn btn-primary">
+                <a href="https://www.jsdelivr.com/package/gh/jscroot/lib" class="btn btn-primary">
                     <i data-lucide="download" width="20" height="20"></i>
                     Explore CDN Library
                 </a>
